[project]
name = "pyssf"
version = "0.1.0"
authors = [{ name = "Mitch Woodward", email = "hello@mitchw.xyz" }]
description = "A Python wrapper of the ssf package for formatting numbers."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }


[project.urls]
"Homepage" = "https://github.com/mitchwxyz/pyssf"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyssf"]

[dependency-groups]
dev = ["pytest>=8.4.1"]
